--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "qs": "^6.14.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "svix": "^1.84.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
