--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@stripe/stripe-js": "^8.6.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
@@ -31,6 +33,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
     "sonner": "^2.0.7",
+    "stripe": "^20.1.0",
     "svix": "^1.84.1",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.2"
